added hero banner

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav>
       <ul>
         <li>
-          <a href="#about">About Me</a>
+          <a href="#about">ABOUT</a>
         </li>
         <li>
-          <a href="#work">Work</a>
+          <a href="#work">WORK</a>
         </li>
         <li>
-          <a href="#contact">Contact Me</a>
+          <a href="#contact">CONTACT ME</a>
         </li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>My last trip | Santa Cruz</h2>
     </div>
   </section>
 
