added image bio and about me section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#work">WORK</a>
         </li>
         <li>
-          <a href="#contact">CONTACT ME</a>
+          <a href="#contact">CONTACT</a>
         </li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>My last trip | Santa Cruz</h2>
+      <h2>My last trip | Santa Cruz de Tenerife</h2>
     </div>
   </section>
 
@@ -39,6 +39,8 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+      <img id="bio-image" src="/Assets/Personal-photo.JPG" alt="Picture of myself"/>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
     </section>
 
     <!-- portfolio container -->
@@ -49,6 +51,10 @@
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
+      <p>
+        <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
+      </p>
     </section>
   </main>
 </body>
