centered the nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div id="page">
   <!-- main logo / nav -->
   <header>
     <h1>Ana Domuta</h1>
@@ -31,7 +32,7 @@
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>My last trip | Santa Cruz de Tenerife</h2>
+      <h2>My last trip | La Gomera</h2>
     </div>
   </section>
 
@@ -39,7 +40,6 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
-      <img id="bio-image" src="/Assets/Personal-photo.JPG" alt="Picture of myself"/>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
     </section>
 
@@ -49,7 +49,7 @@
     </section>
 
     <!-- contact -->
-    <section class="page-section contact" id="contact">
+    <section class="page-section" id="contact">
       <h2>Contact Me</h2>
       <p>
         <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
@@ -57,6 +57,7 @@
       </p>
     </section>
   </main>
+</div>
 </body>
 
 </html>
