created gridarea for work section in HTML

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ana Domuta | Web Developer</title>
+  <title>Ana Domuța | Web Developer</title>
   <link rel="stylesheet" href="./starter/css/style.css" />
 </head>
 
@@ -43,9 +43,27 @@
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
     </section>
 
+    <div class="page-section">
+      <h2>Work</h2>
+    </div>
+
     <!-- portfolio container -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
+      <div id="code-refactor" class="categoryGridArea">
+        <div class="heading">Code Refactor</div>
+      </div>
+      <div id="project2" class="categoryGridArea">
+        <div class="heading">Project 2</div>
+      </div>
+      <div id="project3" class="categoryGridArea">
+        <div class="heading">Project 3</div>
+      </div>
+      <div id="project4" class="categoryGridArea">
+        <div class="heading">Project 4</div>
+      </div>
+      <div id="project5" class="categoryGridArea">
+        <div class="heading">Project 5</div>
+      </div>
     </section>
 
     <!-- contact -->
@@ -59,5 +77,9 @@
   </main>
 </div>
 </body>
+
+<footer>
+  <p>Made by Ana Domuta</p>
+</footer>
 
 </html>
