added background color to grid headings

--- a/index.html
+++ b/index.html
@@ -11,75 +11,77 @@
 
 <body>
   <div id="page">
-  <!-- main logo / nav -->
-  <header>
-    <h1>Ana Domuta</h1>
-    <nav>
-      <ul>
-        <li>
-          <a href="#about">ABOUT</a>
-        </li>
-        <li>
-          <a href="#work">WORK</a>
-        </li>
-        <li>
-          <a href="#contact">CONTACT</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    <!-- main logo / nav -->
+    <header>
+      <h1>Ana Domuta</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about">ABOUT</a>
+          </li>
+          <li>
+            <a href="#work">WORK</a>
+          </li>
+          <li>
+            <a href="#contact">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <!-- hero banner -->
-  <section class="hero-banner">
-    <div>
-      <h2>My last trip | La Gomera</h2>
-    </div>
-  </section>
+    <!-- hero banner -->
+    <figure class="hero-banner">
+        <figcaption>My last trip | La Gomera<figcaption>
+    </figure>
 
-  <main class="page-wrapper">
-    <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About Me</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
-    </section>
+    <main class="page-wrapper">
+      <!-- about me -->
+      <section class="page-section" id="about">
+        <h2>About Me</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut
+          harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem
+          voluptatem quidem laboriosam?</p>
+      </section>
 
-    <div class="page-section">
-      <h2>Work</h2>
-    </div>
+      <div class="page-section">
+        <h2>Work</h2>
+      </div>
 
-    <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <div id="code-refactor" class="categoryGridArea">
-        <div class="heading">Code Refactor</div>
-      </div>
-      <div id="project2" class="categoryGridArea">
-        <div class="heading">Project 2</div>
-      </div>
-      <div id="project3" class="categoryGridArea">
-        <div class="heading">Project 3</div>
-      </div>
-      <div id="project4" class="categoryGridArea">
-        <div class="heading">Project 4</div>
-      </div>
-      <div id="project5" class="categoryGridArea">
-        <div class="heading">Project 5</div>
-      </div>
-    </section>
+      <!-- portfolio container -->
+      <section class="page-section" id="work">
+        <div id="code-refactor" class="categoryGridArea">
+          <div class="heading">Code Refactor</div>
+        </div>
+        <div id="project2" class="categoryGridArea">
+          <div class="heading">Project 2</div>
+        </div>
+        <div id="project3" class="categoryGridArea">
+          <div class="heading">Project 3</div>
+        </div>
+        <div id="project4" class="categoryGridArea">
+          <div class="heading">Project 4</div>
+        </div>
+        <div id="project5" class="categoryGridArea">
+          <div class="heading">Project 5</div>
+        </div>
+      </section>
 
-    <!-- contact -->
-    <section class="page-section" id="contact">
-      <h2>Contact Me</h2>
-      <p>
-        <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
-      </p>
-    </section>
-  </main>
-</div>
+      <!-- contact -->
+      <section class="page-section" id="contact">
+        <h2>Contact Me</h2>
+        <p>
+          <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
+          <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
+        </p>
+      </section>
+    </main>
+  </div>
 </body>
 
 <footer>
-  <p>Made by Ana Domuta</p>
+  <p>Made by Ana Domuta</br>
+    &copy; 2023
+  </p>
 </footer>
 
 </html>
