added images to assets

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="page">
-    <!-- main logo / nav -->
+    <!-- Navbar -->
     <header>
       <h1>Ana Domuta</h1>
       <nav>
@@ -29,13 +29,13 @@
       </nav>
     </header>
 
-    <!-- hero banner -->
+    <!-- Hero Banner -->
     <figure class="hero-banner">
         <figcaption>My last trip | La Gomera<figcaption>
     </figure>
 
     <main class="page-wrapper">
-      <!-- about me -->
+      <!-- About Me -->
       <section class="page-section" id="about">
         <h2>About Me</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut
@@ -47,7 +47,7 @@
         <h2>Work</h2>
       </div>
 
-      <!-- portfolio container -->
+      <!-- Portfolio Container -->
       <section class="page-section" id="work">
         <div id="code-refactor" class="categoryGridArea">
           <div class="heading">Code Refactor</div>
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-      <!-- contact -->
+      <!-- Contact -->
       <section class="page-section" id="contact">
         <h2>Contact Me</h2>
         <p>
@@ -78,6 +78,7 @@
   </div>
 </body>
 
+<!-- Footer -->
 <footer>
   <p>Made by Ana Domuta</br>
     &copy; 2023
