--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
 
     <main class="page-wrapper">
       <!-- About Me -->
-      <section class="page-section" id="about">
-        <h2>About Me</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut
-          harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem
-          voluptatem quidem laboriosam?</p>
+      <section class="page-section">
+        <h2 id="about">About Me</h2>
+        <p id="about-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
       </section>
 
       <div class="page-section">
