added bio image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="page">
+  <div class="page">
     <!-- Navbar -->
     <header>
       <h1>Ana Domuta</h1>
@@ -39,6 +39,7 @@
       <section class="page-section">
         <h2 id="about">About Me</h2>
         <p id="about-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
+        <img src="./Assets/bio-image.JPG" alt="Personal Photo">
       </section>
 
       <div class="page-section">
