--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
 
     <!-- Hero Banner -->
     <figure class="hero-banner">
-        <figcaption>My last trip | La Gomera<figcaption>
+      <figcaption>My last trip | La Gomera<figcaption>
     </figure>
 
     <main class="page-wrapper">
       <!-- About Me -->
       <section class="page-section">
         <h2 id="about">About Me</h2>
-        <p id="about-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum, quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias exercitationem voluptatem quidem laboriosam?</p>
-        <img src="./Assets/bio-image.JPG" alt="Personal Photo">
+        <p id="about-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum,
+          quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias
+          exercitationem voluptatem quidem laboriosam?</p>
+        <img id="bio-img" src="./Assets/bio-image.JPG" alt="Personal Photo">
       </section>
 
       <div class="page-section">
@@ -49,18 +51,34 @@
       <!-- Portfolio Container -->
       <section class="page-section" id="work">
         <div id="code-refactor" class="categoryGridArea">
+          <figure>
+            <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img id="whiteboard-img"
+                src="/Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
+          </figure>
           <div class="heading">Code Refactor</div>
         </div>
         <div id="project2" class="categoryGridArea">
+          <figure>
+            <a href="#"><img id="vulcano-img" src="/Assets/el-teide-vulcano.jpeg" alt="El Teide Vulcano from Tenerife"></a>
+          </figure>
           <div class="heading">Project 2</div>
         </div>
         <div id="project3" class="categoryGridArea">
+          <figure>
+            <a href="#"><img id="sunset-img" src="/Assets/sunset-in-tenerife.jpeg" alt="Sunset in Tenerife"></a>
+          </figure>
           <div class="heading">Project 3</div>
         </div>
         <div id="project4" class="categoryGridArea">
+          <figure>
+            <a href="#"><img id="sky-img" src="/Assets/From the sky.jpeg" alt="Sunset viewed from the airplane"></a>
+          </figure>
           <div class="heading">Project 4</div>
         </div>
         <div id="project5" class="categoryGridArea">
+          <figure>
+            <a href="#"><img id="ocean-img" src="/Assets/ocean.jpeg" alt="Ocean view from Santa Cruz de Tenerife"></a>
+          </figure>
           <div class="heading">Project 5</div>
         </div>
       </section>
