changed img from CSS to HTML in grid

--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
       <!-- About Me -->
       <section class="page-section">
         <h2 id="about">About Me</h2>
-        <p id="about-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magnam laborum,
-          quas, incidunt ut harum repellendus iusto fuga fugit nobis consequuntur unde aspernatur odit. Quam alias
-          exercitationem voluptatem quidem laboriosam?</p>
         <img id="bio-img" src="./Assets/bio-image.JPG" alt="Personal Photo">
+        <p id="about-paragraph">Ana Domuta holds a B.Sc. in Business Administration from the University of Cologne,
+          where she specialized in Corporate Development and Economic Psychology, and a MSc in Business Administration
+          from the University of Vienna with a focus on Strategic Management, Organization and Personnel, and Electronic
+          Business. During her studies, she was awarded two scholarships for outstanding academic performance and
+          contributed to a 4-month experiment as a Student Research Assistant. Professionally, she worked as an Account
+          Manager for an aircraft manufacturer and electric vehicle charging startup, and is currently learning Web
+          Development.</p>
       </section>
 
       <div class="page-section">
@@ -52,14 +56,16 @@
       <section class="page-section" id="work">
         <div id="code-refactor" class="categoryGridArea">
           <figure>
-            <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img id="whiteboard-img"
-                src="/Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
+            <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
+                id="whiteboard-img" src="/Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
+                <figcaption>Code Refactor</figcaption>
           </figure>
           <div class="heading">Code Refactor</div>
         </div>
         <div id="project2" class="categoryGridArea">
           <figure>
-            <a href="#"><img id="vulcano-img" src="/Assets/el-teide-vulcano.jpeg" alt="El Teide Vulcano from Tenerife"></a>
+            <a href="#"><img id="vulcano-img" src="/Assets/el-teide-vulcano.jpeg"
+                alt="El Teide Vulcano from Tenerife"></a>
           </figure>
           <div class="heading">Project 2</div>
         </div>
@@ -88,6 +94,7 @@
         <h2>Contact Me</h2>
         <p>
           <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
+          </br></br>
           <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
         </p>
       </section>
