--- a/index.html
+++ b/index.html
@@ -39,53 +39,55 @@
       <section class="page-section">
         <h2 id="about">About Me</h2>
         <img id="bio-img" src="./Assets/bio-image.JPG" alt="Personal Photo">
-        <p id="about-paragraph">Ana Domuta holds a B.Sc. in Business Administration from the University of Cologne,
-          where she specialized in Corporate Development and Economic Psychology, and a MSc in Business Administration
-          from the University of Vienna with a focus on Strategic Management, Organization and Personnel, and Electronic
+        <p id="about-paragraph">Ana Domuta holds a B.Sc. in Business Administration from the University of Cologne,where
+          she specialized in Corporate Development and Economic Psychology, and a MSc in Business Administration from
+          the University of Vienna with a focus on Strategic Management, Organization and Personnel, and Electronic
           Business. During her studies, she was awarded two scholarships for outstanding academic performance and
           contributed to a 4-month experiment as a Student Research Assistant. Professionally, she worked as an Account
           Manager for an aircraft manufacturer and electric vehicle charging startup, and is currently learning Web
           Development.</p>
       </section>
 
+      <!-- Portfolio Container -->
       <div class="page-section">
         <h2>Work</h2>
       </div>
-
-      <!-- Portfolio Container -->
       <section class="page-section" id="work">
+        <!-- First project -->
         <div id="code-refactor" class="categoryGridArea">
           <figure>
             <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
                 id="whiteboard-img" src="/Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
-                <figcaption>Code Refactor</figcaption>
           </figure>
           <div class="heading">Code Refactor</div>
         </div>
+        <!-- Second project -->
         <div id="project2" class="categoryGridArea">
           <figure>
-            <a href="#"><img id="vulcano-img" src="/Assets/el-teide-vulcano.jpeg"
-                alt="El Teide Vulcano from Tenerife"></a>
+            <a href="#"><img id="ocean2-img" src="/Assets/ocean2.JPG" alt="Ocean view from Tenerife"></a>
           </figure>
-          <div class="heading">Project 2</div>
+          <div class="heading">Project 2<i> [Placeholder]</i></div>
         </div>
+        <!-- Third project -->
         <div id="project3" class="categoryGridArea">
           <figure>
             <a href="#"><img id="sunset-img" src="/Assets/sunset-in-tenerife.jpeg" alt="Sunset in Tenerife"></a>
           </figure>
-          <div class="heading">Project 3</div>
+          <div class="heading">Project 3<i> [Placeholder]</i></div>
         </div>
+        <!-- Fourth project -->
         <div id="project4" class="categoryGridArea">
           <figure>
-            <a href="#"><img id="sky-img" src="/Assets/From the sky.jpeg" alt="Sunset viewed from the airplane"></a>
+            <a href="#"><img id="sun-img" src="/Assets/sunset.jpeg" alt="Sunset viewed from the airplane"></a>
           </figure>
-          <div class="heading">Project 4</div>
+          <div class="heading">Project 4<i> [Placeholder]</i></div>
         </div>
+        <!-- Fifth project -->
         <div id="project5" class="categoryGridArea">
           <figure>
             <a href="#"><img id="ocean-img" src="/Assets/ocean.jpeg" alt="Ocean view from Santa Cruz de Tenerife"></a>
           </figure>
-          <div class="heading">Project 5</div>
+          <div class="heading">Project 5 <i>[Placeholder]</i></div>
         </div>
       </section>
 
