changed grid to flex display

--- a/index.html
+++ b/index.html
@@ -38,63 +38,67 @@
       <!-- About Me -->
       <section class="page-section">
         <h2 id="about">About Me</h2>
-        <img id="bio-img" src="./Assets/bio-image.JPG" alt="Personal Photo">
-        <p id="about-paragraph">Ana Domuta holds a B.Sc. in Business Administration from the University of Cologne,where
-          she specialized in Corporate Development and Economic Psychology, and a MSc in Business Administration from
-          the University of Vienna with a focus on Strategic Management, Organization and Personnel, and Electronic
-          Business. During her studies, she was awarded two scholarships for outstanding academic performance and
-          contributed to a 4-month experiment as a Student Research Assistant. Professionally, she worked as an Account
-          Manager for an aircraft manufacturer and electric vehicle charging startup, and is currently learning Web
-          Development.</p>
+        <img class="bio-img" src="./Assets/bio-image.JPG" alt="Personal Photo">
+        <p class="about-paragraph">Ana Domuta holds a MSc in Business Administration from the University of Vienna with
+          a focus on Strategic Management, Organization and Personnel, and Electronic Business. Professionally, she
+          worked as an Account Manager for an aircraft manufacturer and electric vehicle charging startup, and is
+          currently learning Web Development.</p>
       </section>
 
       <!-- Portfolio Container -->
-      <div class="page-section">
-        <h2>Work</h2>
-      </div>
-      <section class="page-section" id="work">
-        <!-- First project -->
-        <div id="code-refactor" class="categoryGridArea">
-          <figure>
-            <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
-                id="whiteboard-img" src="/Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
-          </figure>
-          <div class="heading">Code Refactor</div>
-        </div>
-        <!-- Second project -->
-        <div id="project2" class="categoryGridArea">
-          <figure>
-            <a href="#"><img id="ocean2-img" src="/Assets/ocean2.JPG" alt="Ocean view from Tenerife"></a>
-          </figure>
-          <div class="heading">Project 2<i> [Placeholder]</i></div>
-        </div>
-        <!-- Third project -->
-        <div id="project3" class="categoryGridArea">
-          <figure>
-            <a href="#"><img id="sunset-img" src="/Assets/sunset-in-tenerife.jpeg" alt="Sunset in Tenerife"></a>
-          </figure>
-          <div class="heading">Project 3<i> [Placeholder]</i></div>
-        </div>
-        <!-- Fourth project -->
-        <div id="project4" class="categoryGridArea">
-          <figure>
-            <a href="#"><img id="sun-img" src="/Assets/sunset.jpeg" alt="Sunset viewed from the airplane"></a>
-          </figure>
-          <div class="heading">Project 4<i> [Placeholder]</i></div>
-        </div>
-        <!-- Fifth project -->
-        <div id="project5" class="categoryGridArea">
-          <figure>
-            <a href="#"><img id="ocean-img" src="/Assets/ocean.jpeg" alt="Ocean view from Santa Cruz de Tenerife"></a>
-          </figure>
-          <div class="heading">Project 5 <i>[Placeholder]</i></div>
+      <section>
+        <h2 id="work">Work</h2>
+
+
+        <div class="content">
+          <!-- First project -->
+          <div class="project1">
+            <figure>
+              <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
+                  id="whiteboard-img" src="/Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
+              <figcaption>Code Refactor</figcaption>
+            </figure>
+          </div>
+          <!-- Second project -->
+          <div class="row">
+            <div class="project">
+              <figure>
+                <a href="#"><img id="ocean2-img" src="/Assets/ocean2.JPG" alt="Ocean view from Tenerife"></a>
+                <figcaption>Project 2<i> [Placeholder]</i></figcaption>
+              </figure>
+            </div>
+            <!-- Third project -->
+            <div class="project">
+              <figure>
+                <a href="#"><img id="sunset-img" src="/Assets/sunset-in-tenerife.jpeg" alt="Sunset in Tenerife"></a>
+                <figcaption>Project 3<i> [Placeholder]</i></figcaption>
+              </figure>
+            </div>
+          </div>
+          <!-- Fourth project -->
+          <div class="row">
+            <div class="project">
+              <figure>
+                <a href="#"><img id="sun-img" src="/Assets/sunset.jpeg" alt="Sunset viewed from the airplane"></a>
+                <figcaption>Project 4<i> [Placeholder]</i></figcaption>
+              </figure>
+            </div>
+            <!-- Fifth project -->
+            <div class="project">
+              <figure>
+                <a href="#"><img id="ocean-img" src="/Assets/ocean.jpeg"
+                    alt="Ocean view from Santa Cruz de Tenerife"></a>
+                <figcaption>Project 5<i> [Placeholder]</i></figcaption>
+              </figure>
+            </div>
+          </div>
         </div>
       </section>
 
       <!-- Contact -->
-      <section class="page-section" id="contact">
-        <h2>Contact Me</h2>
-        <p>
+      <section>
+        <h2 id="contact">Contact Me</h2>
+        <p class="contact">
           <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
           </br></br>
           <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
