--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="project1">
             <figure>
               <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
-                  id="whiteboard-img" src="./Assets/code-refactor.png" alt="Whiteboard with changes made"></a>
+                  id="whiteboard-img" src="./Assets/code-refactor.PNG" alt="Whiteboard with changes made"></a>
               <figcaption>Code Refactor</figcaption>
             </figure>
           </div>
@@ -70,7 +70,7 @@
             <!-- Third project -->
             <div class="project">
               <figure>
-                <a href="#"><img id="sunset-img" src="./Assets/sunset-in-tenerife.jpeg" alt="Sunset in Tenerife"></a>
+                <a href="#"><img id="sunset-img" src="./Assets/sunset-in-tenerife.JPEG" alt="Sunset in Tenerife"></a>
                 <figcaption>Project 3<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
@@ -79,14 +79,14 @@
           <div class="row">
             <div class="project">
               <figure>
-                <a href="#"><img id="sun-img" src="./Assets/sunset.jpeg" alt="Sunset viewed from the airplane"></a>
+                <a href="#"><img id="sun-img" src="./Assets/sunset.JPEG" alt="Sunset viewed from the airplane"></a>
                 <figcaption>Project 4<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
             <!-- Fifth project -->
             <div class="project">
               <figure>
-                <a href="#"><img id="ocean-img" src="./Assets/ocean.jpeg"
+                <a href="#"><img id="ocean-img" src="./Assets/ocean.JPEG"
                     alt="Ocean view from Santa Cruz de Tenerife"></a>
                 <figcaption>Project 5<i> [Placeholder]</i></figcaption>
               </figure>
