changed code refactor image

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="project1">
             <figure>
               <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
-                  id="whiteboard-img" src="./Assets/code-refactor.JPG" alt="Whiteboard with changes made"></a>
+                  id="whiteboard-img" src="./Assets/code-refactor.PNG" alt="Whiteboard with changes made"></a>
               <figcaption>Code Refactor</figcaption>
             </figure>
           </div>
