converted img from jpg to png

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <!-- Third project -->
             <div class="project">
               <figure>
-                <a href="#"><img id="sunset-img" src="./Assets/sunset-in-tenerife.JPEG" alt="Sunset in Tenerife"></a>
+                <a href="#"><img id="sunset-img" src="./Assets/sunset-in-tenerife.PNG" alt="Sunset in Tenerife"></a>
                 <figcaption>Project 3<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
@@ -79,14 +79,14 @@
           <div class="row">
             <div class="project">
               <figure>
-                <a href="#"><img id="sun-img" src="./Assets/sunset.JPEG" alt="Sunset viewed from the airplane"></a>
+                <a href="#"><img id="sun-img" src="./Assets/sunset.PNG" alt="Sunset viewed from the airplane"></a>
                 <figcaption>Project 4<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
             <!-- Fifth project -->
             <div class="project">
               <figure>
-                <a href="#"><img id="ocean-img" src="./Assets/ocean.JPEG"
+                <a href="#"><img id="ocean-img" src="./Assets/ocean.PNG"
                     alt="Ocean view from Santa Cruz de Tenerife"></a>
                 <figcaption>Project 5<i> [Placeholder]</i></figcaption>
               </figure>
