adjusted img title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="project">
               <figure>
-                <a href="#"><img id="sun-img" src="./Assets/sunset.PNG" alt="Sunset viewed from the airplane"></a>
+                <a href="#"><img id="sun-img" src="./Assets/sunset.PNG" alt="Sunset viewed from accomodation"></a>
                 <figcaption>Project 4<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
