change class name from row to column

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </figure>
           </div>
           <!-- Second project -->
-          <div class="row">
+          <div class="column">
             <div class="project">
               <figure>
                 <a href="#"><img id="ocean2-img" src="./Assets/ocean2.JPG" alt="Ocean view from Tenerife"></a>
@@ -76,7 +76,7 @@
             </div>
           </div>
           <!-- Fourth project -->
-          <div class="row">
+          <div class="column">
             <div class="project">
               <figure>
                 <a href="#"><img id="sun-img" src="./Assets/sunset.PNG" alt="Sunset viewed from accomodation"></a>
