improved comments in HTML

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
   <div class="page">
-    <!-- Navbar -->
+    <!-- Header -->
     <header>
       <h1>Ana Domuta</h1>
+      <!--Navbar-->
       <nav>
         <ul>
           <li>
@@ -31,9 +32,9 @@
 
     <!-- Hero Banner -->
     <figure class="hero-banner">
-      <figcaption>My last trip | La Gomera<figcaption>
+      <figcaption>My last trip | La Gomera</figcaption>
     </figure>
-
+    <!--Main Content-->
     <main class="page-wrapper">
       <!-- About Me -->
       <section class="page-section">
@@ -45,11 +46,9 @@
           currently learning Web Development.</p>
       </section>
 
-      <!-- Portfolio Container -->
+      <!-- Work -->
       <section>
         <h2 id="work">Work</h2>
-
-
         <div class="content">
           <!-- First project -->
           <div class="project1">
