changed image path in index.html to reflect new folder structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- About Me -->
       <section class="page-section">
         <h2 id="about">About Me</h2>
-        <img class="bio-img" src="./Assets/bio-image.JPG" alt="Personal Photo">
+        <img class="bio-img" src="./starter/assets/images/bio-image.JPG" alt="Personal Photo">
         <p class="about-paragraph">Ana Domuta holds a MSc in Business Administration from the University of Vienna with
           a focus on Strategic Management, Organization and Personnel, and Electronic Business. Professionally, she
           worked as an Account Manager for an aircraft manufacturer and electric vehicle charging startup, and is
@@ -54,7 +54,7 @@
           <div class="project1">
             <figure>
               <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
-                  id="whiteboard-img" src="./Assets/code-refactor.PNG" alt="Whiteboard with changes made"></a>
+                  id="whiteboard-img" src="./starter/assets/images/code-refactor.PNG" alt="Whiteboard with changes made"></a>
               <figcaption>Code Refactor</figcaption>
             </figure>
           </div>
@@ -62,14 +62,14 @@
           <div class="column">
             <div class="project">
               <figure>
-                <a href="#"><img id="ocean2-img" src="./Assets/ocean2.JPG" alt="Ocean view from Tenerife"></a>
+                <a href="#"><img id="ocean2-img" src="./starter/assets/images/ocean2.JPG" alt="Ocean view from Tenerife"></a>
                 <figcaption>Project 2<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
             <!-- Third project -->
             <div class="project">
               <figure>
-                <a href="#"><img id="sunset-img" src="./Assets/sunset-in-tenerife.PNG" alt="Sunset in Tenerife"></a>
+                <a href="#"><img id="sunset-img" src="./starter/assets/images/sunset-in-tenerife.PNG" alt="Sunset in Tenerife"></a>
                 <figcaption>Project 3<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
@@ -78,14 +78,14 @@
           <div class="column">
             <div class="project">
               <figure>
-                <a href="#"><img id="sun-img" src="./Assets/sunset.PNG" alt="Sunset viewed from accomodation"></a>
+                <a href="#"><img id="sun-img" src="./starter/assets/images/sunset.PNG" alt="Sunset viewed from accomodation"></a>
                 <figcaption>Project 4<i> [Placeholder]</i></figcaption>
               </figure>
             </div>
             <!-- Fifth project -->
             <div class="project">
               <figure>
-                <a href="#"><img id="ocean-img" src="./Assets/ocean.PNG"
+                <a href="#"><img id="ocean-img" src="./starter/assets/images/ocean.PNG"
                     alt="Ocean view from Santa Cruz de Tenerife"></a>
                 <figcaption>Project 5<i> [Placeholder]</i></figcaption>
               </figure>
