--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ana Domuța | Web Developer</title>
-  <link rel="stylesheet" href="./starter/css/style.css" />
+  <link rel="stylesheet" href="./starter/assets/css/"/>
 </head>
 
 <body>
