adjusted navbar to match design more closely'

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <!-- Header -->
     <header>
-      <h1>Ana Domuta</h1>
       <!--Navbar-->
-      <nav>
+      <nav class="navBar">
+        <h1>Ana Domuta</h1>
         <ul>
           <li>
             <a href="#about">ABOUT</a>
