changed webpage color theme

--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
       </nav>
     </header>
 
-    <!-- Hero Banner -->
-    <figure class="hero-banner">
-      <figcaption>My last trip | La Gomera</figcaption>
-    </figure>
+    <!-- Banner -->
+    <section class="hero-banner">
+     <img src="./starter/assets/images/bio-img-no-background.PNG"
+    </section>
     <!--Main Content-->
     <main class="page-wrapper">
       <!-- About Me -->
       <section class="page-section">
         <h2 id="about">About Me</h2>
-        <img class="bio-img" src="./starter/assets/images/bio-image.JPG" alt="Personal Photo">
         <p class="about-paragraph">Ana Domuta holds a MSc in Business Administration from the University of Vienna with
           a focus on Strategic Management, Organization and Personnel, and Electronic Business. Professionally, she
           worked as an Account Manager for an aircraft manufacturer and electric vehicle charging startup, and is
