adjusted about me section to display the vertical border

--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
     </header>
 
     <!-- Banner -->
-    <section class="hero-banner">
-     <img src="./starter/assets/images/bio-img-no-background.PNG"
+    <section class="bio-image">
+     <img src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image"/>
     </section>
     <!--Main Content-->
     <main class="page-wrapper">
       <!-- About Me -->
-      <section class="page-section">
+      <section class="about">
         <h2 id="about">About Me</h2>
-        <p class="about-paragraph">Ana Domuta holds a MSc in Business Administration from the University of Vienna with
+        <article class="vertical-border">
+        <p class="about-paragraph"> Ana Domuta holds a MSc in Business Administration from the University of Vienna with
           a focus on Strategic Management, Organization and Personnel, and Electronic Business. Professionally, she
           worked as an Account Manager for an aircraft manufacturer and electric vehicle charging startup, and is
           currently learning Web Development.</p>
+        </article>
       </section>
 
       <!-- Work -->
