adjusted work section to display the vertical border

--- a/index.html
+++ b/index.html
@@ -6,104 +6,109 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ana Domuța | Web Developer</title>
-  <link rel="stylesheet" href="starter/assets/css/style.css"/>
+  <link rel="stylesheet" href="starter/assets/css/style.css" />
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-      <!--Navbar-->
-      <nav class="navBar">
-        <h1>Ana Domuta</h1>
-        <ul>
-          <li>
-            <a href="#about">ABOUT</a>
-          </li>
-          <li>
-            <a href="#work">WORK</a>
-          </li>
-          <li>
-            <a href="#contact">CONTACT</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <!-- Header -->
+  <header>
+    <!--Navbar-->
+    <nav class="navBar">
+      <h1>Ana Domuta</h1>
+      <ul>
+        <li>
+          <a href="#about">ABOUT</a>
+        </li>
+        <li>
+          <a href="#work">WORK</a>
+        </li>
+        <li>
+          <a href="#contact">CONTACT</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Banner -->
-    <section class="bio-image">
-     <img src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image"/>
-    </section>
-    <!--Main Content-->
-    <main class="page-wrapper">
-      <!-- About Me -->
-      <section class="about">
-        <h2 id="about">About Me</h2>
-        <article class="vertical-border">
+  <!-- Banner -->
+  <section class="bio-image">
+    <img src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image" />
+    <h2>Welcome to my portfolio!</h2>
+  </section>
+
+  <!--Main Content-->
+  <main class="page-wrapper">
+    <!-- About Me -->
+    <section class="about">
+      <h2 id="about">About Me</h2>
+      <article class="vertical-border">
         <p class="about-paragraph"> Ana Domuta holds a MSc in Business Administration from the University of Vienna with
           a focus on Strategic Management, Organization and Personnel, and Electronic Business. Professionally, she
           worked as an Account Manager for an aircraft manufacturer and electric vehicle charging startup, and is
           currently learning Web Development.</p>
-        </article>
-      </section>
+      </article>
+    </section>
 
-      <!-- Work -->
-      <section>
-        <h2 id="work">Work</h2>
+    <!-- Work -->
+    <section class="work">
+      <h2 id="work">Work</h2>
+      <article class="vertical-border">
+        <!-- First project -->
         <div class="content">
-          <!-- First project -->
           <div class="project1">
             <figure>
               <a href="https://anadomuta.github.io/challenge-horiseon-accessibility/" target="_blank"><img
-                  id="whiteboard-img" src="./starter/assets/images/code-refactor.PNG" alt="Whiteboard with changes made"></a>
+                  id="whiteboard-img" src="./starter/assets/images/code-refactor.PNG"
+                  alt="Whiteboard with changes made"></a>
               <figcaption>Code Refactor</figcaption>
             </figure>
           </div>
           <!-- Second project -->
-          <div class="column">
-            <div class="project">
-              <figure>
-                <a href="#"><img id="ocean2-img" src="./starter/assets/images/ocean2.JPG" alt="Ocean view from Tenerife"></a>
-                <figcaption>Project 2<i> [Placeholder]</i></figcaption>
-              </figure>
-            </div>
-            <!-- Third project -->
-            <div class="project">
-              <figure>
-                <a href="#"><img id="sunset-img" src="./starter/assets/images/sunset-in-tenerife.PNG" alt="Sunset in Tenerife"></a>
-                <figcaption>Project 3<i> [Placeholder]</i></figcaption>
-              </figure>
-            </div>
+          <!-- <div class="column"> -->
+          <div class="project">
+            <figure>
+              <a href="#"><img id="ocean2-img" src="./starter/assets/images/ocean2.JPG"
+                  alt="Ocean view from Tenerife"></a>
+              <figcaption>Project 2<i> [Placeholder]</i></figcaption>
+            </figure>
+          </div>
+          <!-- Third project -->
+          <div class="project">
+            <figure>
+              <a href="#"><img id="sunset-img" src="./starter/assets/images/sunset-in-tenerife.PNG"
+                  alt="Sunset in Tenerife"></a>
+              <figcaption>Project 3<i> [Placeholder]</i></figcaption>
+            </figure>
           </div>
           <!-- Fourth project -->
-          <div class="column">
-            <div class="project">
-              <figure>
-                <a href="#"><img id="sun-img" src="./starter/assets/images/sunset.PNG" alt="Sunset viewed from accomodation"></a>
-                <figcaption>Project 4<i> [Placeholder]</i></figcaption>
-              </figure>
-            </div>
-            <!-- Fifth project -->
-            <div class="project">
-              <figure>
-                <a href="#"><img id="ocean-img" src="./starter/assets/images/ocean.PNG"
-                    alt="Ocean view from Santa Cruz de Tenerife"></a>
-                <figcaption>Project 5<i> [Placeholder]</i></figcaption>
-              </figure>
-            </div>
+          <div class="project">
+            <figure>
+              <a href="#"><img id="sun-img" src="./starter/assets/images/sunset.PNG"
+                  alt="Sunset viewed from accomodation"></a>
+              <figcaption>Project 4<i> [Placeholder]</i></figcaption>
+            </figure>
+          </div>
+          <!-- Fifth project -->
+          <div class="project">
+            <figure>
+              <a href="#"><img id="ocean-img" src="./starter/assets/images/ocean.PNG"
+                  alt="Ocean view from Santa Cruz de Tenerife"></a>
+              <figcaption>Project 5<i> [Placeholder]</i></figcaption>
+            </figure>
           </div>
         </div>
-      </section>
+      </article>
+    </section>
 
-      <!-- Contact -->
-      <section>
-        <h2 id="contact">Contact Me</h2>
-        <p class="contact">
-          <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
-          </br></br>
-          <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
-        </p>
-      </section>
-    </main>
+    <!-- Contact -->
+    <section>
+      <h2 id="contact">Contact Me</h2>
+      <p class="contact">
+        <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
+        </br></br>
+        <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
+      </p>
+    </section>
+  </main>
 
 </body>
 
