adjusted contact me section to display vertical border

--- a/index.html
+++ b/index.html
@@ -100,13 +100,14 @@
     </section>
 
     <!-- Contact -->
-    <section>
+    <section class="contact">
       <h2 id="contact">Contact Me</h2>
-      <p class="contact">
-        <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
-        </br></br>
-        <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
-      </p>
+      <article class="vertical-border">
+        <p class="contact">
+          <a href="https://www.linkedin.com/in/ana-domuta/" target="_blank">LinkedIn</a>
+          <a href="https://github.com/anadomuta" target="_blank">GitHub</a>
+        </p>
+      </article>
     </section>
   </main>
 
