added hover effects for images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  <!-- Header -->
   <header>
     <!--Navbar-->
     <nav class="navBar">
@@ -31,8 +30,8 @@
 
   <!-- Banner -->
   <section class="bio-image">
-    <img src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image" />
-    <h2>Welcome to my portfolio!</h2>
+    <h2 id="welcome">Welcome to my portfolio!</h2>
+    <img id="bio-image" src="./starter/assets/images/bio-img-no-background.PNG" alt="Bio image" />
   </section>
 
   <!--Main Content-->
@@ -41,10 +40,8 @@
     <section class="about">
       <h2 id="about">About Me</h2>
       <article class="vertical-border">
-        <p class="about-paragraph"> Ana Domuta holds a MSc in Business Administration from the University of Vienna with
-          a focus on Strategic Management, Organization and Personnel, and Electronic Business. Professionally, she
-          worked as an Account Manager for an aircraft manufacturer and electric vehicle charging startup, and is
-          currently learning Web Development.</p>
+        <p class="about-paragraph"> Hi! My name is Ana and I'm currently learning frontend Web Development. My favorite learning topic is UX design. Having worked in Customer Success and Account Management, I have learnt to better understand users and develop features that satisfy their needs.</br></br> I have an educational background in Business Administration, where I have focused on Strategic Management, Organization and Personnel, and Electronic Business.</br></br> In my free time, I enjoy going for a walk while having a coffee. 
+      </p>
       </article>
     </section>
 
